--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="i.html">Home</a>
                 </li
                 ><li>
-                    <a href="index.html">Application Info</a> <!--#Stay on the current page-->
+                    <a href="#">Application Info</a> <!--#Stay on the current page-->
                 </li
                 ><li>
                     <a href="id.html">Developer Profiles</a>
