--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </aside>    
     <main>
         <section>
-<h1 id="Information" >
-                Information
+<h1 id="Introduction" >
+                Introduction
             </h1>
             <p>
                 This page provides information about the application, including an overview, its features, 
