--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager Info</title>
+    <title>Info-Task Manager</title>
     <link rel="stylesheet" href="index.css">
     <script defer src="index.js"></script>
 </head>
@@ -11,16 +11,16 @@
     <header>
         <nav class="navclass">
             <div class="logo">
-                <a href="index.html">
+                <a href="index2.html">
                     Task Manager
                 </a>
             </div>
             <ul>
                 <li>
-                    <a href="i.html">Home</a>
+                    <a href="index2.html">Home</a>
                 </li
                 ><li>
-                    <a href="#">Application Info</a> <!--#Stay on the current page-->
+                    <a href="index.html">Application Info</a> <!--#Stay on the current page-->
                 </li
                 ><li>
                     <a href="id.html">Developer Profiles</a>
@@ -36,8 +36,8 @@
     </aside>    
     <main>
         <section>
-<h1 id="Introduction" >
-                Introduction
+<h1 id="Information" >
+                Information
             </h1>
             <p>
                 This page provides information about the application, including an overview, its features, 
@@ -74,7 +74,7 @@
                         </li>
                     </ul>
                     <li>
-                        Add Taks with Priority
+                        Add Tasks with Priority
                     </li>
                     <ul>
                         <li>
